# chess-analyzer

./: .cta.json  .env.example  .gitignore  AGENTS.md  MISSING_FEATURES.md  README.md  biome.json  fix-analysis.ts  fix-insert.ts  fix-worker.ts  fix_final.js  fix_final2.js  fix_tagrow.js  fix_types.js  fix_types2.js  fix_worker.js  instrument.server.mjs  package.json  tsconfig.json  update-analysis.ts  update_tests.js  vite.config.ts
.claude/rules/: ai-guidance.md  ai-prompts.md  architecture.md  code-style.md  db.md  feature-modules.md  (+1 more)
design-explorations/: move-analysis.html
docs/: dimensional-ratings-plan.md  rating-pipeline.md
drizzle/: 0000_cooing_king_cobra.sql  0000_spooky_polaris.sql  0001_equal_luminals.sql  0001_rare_jackpot.sql  0002_mushy_magma.sql  0002_salty_sauron.sql  0003_fresh_wind_dancer.sql  0003_regular_thundra.sql  0004_graceful_overlord.sql  0004_powerful_phil_sheldon.sql  0005_aberrant_blockbuster.sql  0006_slim_thing.sql
public/: manifest.json
scripts/: backfill-clock-times.ts  backfill-maia-cache.ts  backfill-maia-game-ratings.ts  benchmark-analysis.ts  build-eval-cache.ts  calibrate-rating-formula.ts  clear-all.ts  eval-phase1.ts  eval-phase2.ts  eval-phase3.ts  eval-rating.ts  reanalyze-all.ts  reanalyze-game.ts  reconcile.ts  train-phase3.py
services/maia-inference/: .gitignore  README.md  pyproject.toml
services/maia-inference/scripts/: bench_infer.py
services/maia-inference/src/: maia_loader.py  main.py
services/maia-inference/tests/: test_infer_batch.py  test_inference.py
src/: env.ts  routeTree.gen.ts  styles.css
(+322 files in other folders)
