[project]
name = "maia-inference"
version = "0.1.0"
description = "Maia-2 rapid model HTTP inference service"
requires-python = ">=3.11"
dependencies = [
    "chess>=1.11.2",
    "einops>=0.8.2",
    "fastapi>=0.136.1",
    "gdown>=6.0.0",
    "httpx>=0.28.1",
    "maia2>=0.9",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "pyzstd>=0.19.1",
    "torch>=2.0",
    "uvicorn>=0.46.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[project.scripts]
serve = "uvicorn src.main:app --port 8765"
